--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criptomundo</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="js/app.js"></script>
+    <script src="/js/productos.js"></script>
+    <script src="/js/sistema.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
