--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<script src="/js/productos.js"></script>
-<script src="/js/sistema.js"></script>
-<script src="/js/main.js"></script>
+<script src="js/productos.js"></script>
+<script src="js/sistema.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
