--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     Producto</li>
                 <li id="incrementar-producto"
                     class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">
-                    Incrementar Precios</li>
+                    Modificar Precios</li>
                 <li id="editar-producto"
                     class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">Editar
                     Producto</li>
@@ -39,8 +39,6 @@
         <section id="tabla-productos" class="w-full">
         </section>
     </main>
-
-
 
     <script src="https://cdn.tailwindcss.com"></script>
 
