--- a/index.html
+++ b/index.html
@@ -4,47 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sistema de Stock</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
     <header>
-
         <nav>
             <ul id="nav-list"
                 class="p-5 bg-cyan-700 text-white flex flex-col md:flex-row items-center gap-5 justify-center">
                 <li id="listar-productos"
-                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">Listar
-                    Productos</li>
+                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">
+                    Listar Productos</li>
                 <li id="agregar-producto"
-                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">Agregar
-                    Producto</li>
+                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">
+                    Agregar Producto</li>
                 <li id="buscar-producto"
-                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">Buscar
-                    Producto</li>
+                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">
+                    Buscar Producto</li>
                 <li id="incrementar-producto"
                     class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">
                     Modificar Precios</li>
                 <li id="editar-producto"
-                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">Editar
-                    Producto</li>
+                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">
+                    Editar Producto</li>
+                <li id="filtrar-rubro"
+                    class="p-3 border-b border-b-purple-300 cursor-pointer hover:bg-purple-600 transition-all">
+                    Filtrar Rubro</li>
             </ul>
         </nav>
     </header>
     <div id="alert" class="fixed top-5 right-5"></div>
     <main class="p-5 min-h-screen max-h-full grid items-center justify-center bg-[#191919]">
-
+        <h1 class="text-4xl font-bold text-white p-4 rounded-lg shadow-l">
+            Bienvenido al Sistema de Stock
+        </h1>
         <form action="" id="form" class="grid grid-cols-1 md:grid-cols-2 gap-3 w-full"></form>
         <section id="tabla-productos" class="w-full">
         </section>
     </main>
 
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <script src="./js/productos.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/sistema.js"></script>
+    <script src="./js/productos.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
